<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Battery Test App</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="time">count</string>
    <string name="connecting_wifi">Connecting to Wi-Fi</string>
    <string name="ms">ms</string>
    <string name="mins">mins</string>
    <string name="scans">scans</string>
    <string name="upload_download">Upload &amp; Download</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="interval">Interval</string>
    <string name="param">Param</string>
    <string name="value">Value</string>
    <string name="enable_all">Enable All</string>
    <string name="disable_all">Disable All</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="delete">Del</string>
    <string name="strategy_settings">Scan Strategy Settings</string>
    <string name="network_strategy_settings">Network Strategy Settings</string>
    <string name="edittext_empty">EditText is empty.</string>
    <string name="edittext_not_digit">EditText requires digit.</string>
    <string name="reset_param">Reset All Param</string>
    <string name="enabled_param">Enabled All Param</string>
    <string name="disabled_param">Disabled All Param</string>
    <string name="param_set_successfully">Parameter Set Successfully</string>
    <string name="param_set_failed">Parameter Set Failed</string>
    <string name="auto_switch_wifi">Auto turn Wi-Fi on and off</string>
    <string name="keep_wifi_on">Keep Wi-Fi On after use</string>
    <string name="based_on_time">Sleep time</string>
    <string name="based_on_scan">Based on scan</string>
    <string name="strategy_text">Scan <xliff:g id="times" example="5">%1$s</xliff:g> times per <xliff:g id="interval" example="1">%2$s</xliff:g> ms</string>
    <string name="set_param">Set param<xliff:g id="param" example="136">%1$s</xliff:g> to <xliff:g id="value" example="15">%2$s</xliff:g></string>
    <string name="based_on_time_text"><xliff:g id="direction" example="upload">%1$s</xliff:g> and sleep for <xliff:g id="time" example="10">%2$s</xliff:g> mins</string>
    <string name="based_on_scans_text"><xliff:g id="direction" example="upload">%1$s</xliff:g> and sleep for <xliff:g id="scans" example="10">%2$s</xliff:g> scans</string>

    <!-- preference -->
    <string name="title_sleep_preference">SLEEP PREFERENCES</string>
    <string name="title_sleep_interval">Sleep Interval</string>
    <string name="summary_sleep_interval">The interval scan counts between each sleep(scan number)</string>
    <string name="title_sleep_duration">Sleep Duration</string>
    <string name="summary_sleep_duration">Sleep time(min)</string>
    
    <string name="title_screen_dim_preference">SCREEN DIMMING</string>
    <string name="title_time_at_80">time at 80% brightness</string>
    <string name="summary_time_at_80">minutes at 80% of brightness</string>
    <string name="title_time_at_0">time at 0% brightness</string>
    <string name="summary_time_at_0">minutes at 0% of brightness</string>
    
</resources>